# VibeAnalytix

./: .env.example  .env.production.example  .gitignore  IMPLEMENTATION.md  IMPLEMENTATION_VERIFICATION.md  Makefile  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  claude.md  docker-compose.prod.yml  docker-compose.yml  pytest.ini  quick-start.bat  quick-start.sh  rewrite_ui.py  stitch_to_react.py  tmpclaude-88d0-cwd
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  celerybeat-schedule  entrypoint.api.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  analysis.py  auth.py  celery_app.py  cleanup.py  config.py  database.py  diagram_generator.py  embeddings.py  explanation_engine.py  github_metadata.py  ingestion.py  knowledge_builder.py  llm_provider.py  main.py  models.py  parser.py  provider_health.py  query_service.py  rate_limiter.py  redis_store.py  schemas.py  tasks.py  vector_store.py
backend/app/routers/: auth.py  jobs.py
backend/migrations/: add_diagrams_column.sql
frontend/: Dockerfile  build_error.txt  build_error_2.txt  build_error_3.txt  build_error_4.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: AuthBootstrap.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: DiagramViewer.tsx  MarkdownRenderer.tsx
scripts/: backup-postgres.sh  firewall-setup.sh  rollback.sh
stitch_htmls/: forgot_password.html  history.html  settings.html  sign_in.html
tests/: conftest.py
(+37 files in other folders)
